<resources>
    <string name="app_name">task app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_user">Add a new User</string>
    <string name="user_name">User Name</string>
    <string name="user_age">User Age</string>
    <string name="user_job_title">User Job Title</string>
    <string name="user_gender">User Gender</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_age">Enter User Age</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="enter_your_job_title">Enter Your Job Title</string>
    <string name="enter_your_gender">Enter Your Gender</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="age_">Age:</string>
    <string name="gender_">Gender:</string>
    <string name="job_title_">Job Title:</string>
    <string name="all_users">All Users</string>
    <string name="you_must_enter_user_name">You must enter user name</string>
    <string name="you_must_enter_user_age">You must enter user age</string>
    <string name="you_must_enter_user_job_title">You must enter user job title</string>
    <string name="you_must_enter_user_gender">You must enter user gender</string>
    <string name="ok">Ok</string>
    <string name="user_added_successfully">User Added Successfully</string>
    <string name="no_users_yet">No Users Yet</string>
</resources>