<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.heba.task_app.features.user.presentation.add_user.AddUserFragment">


    <TextView
        android:id="@+id/tvAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/add_a_new_user"
        android:textAlignment="center"
        android:fontFamily="@font/amaranth_bold"
        android:textColor="@color/blue"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvUserNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_17sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddUser" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvUserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_11sdp"
        app:boxBackgroundMode="none"
        app:cursorColor="@color/blue"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserNameTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_transparent_10stroke"
            android:fontFamily="@font/amaranth_regular"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:paddingVertical="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/blue"
            android:textColorHint="#A8A8AA"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvUserAgeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/age"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_17sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvUserAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_11sdp"
        app:boxBackgroundMode="none"
        app:cursorColor="@color/blue"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserAgeTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_transparent_10stroke"
            android:fontFamily="@font/amaranth_regular"
            android:hint="@string/enter_your_age"
            android:inputType="number"
            android:paddingVertical="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/blue"
            android:textColorHint="#A8A8AA"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvUserJobTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/job_title"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_17sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserAge" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvUserJob"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_11sdp"
        app:boxBackgroundMode="none"
        app:cursorColor="@color/blue"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserJobTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_transparent_10stroke"
            android:fontFamily="@font/amaranth_regular"
            android:hint="@string/enter_your_job_title"
            android:inputType="text"
            android:paddingVertical="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/blue"
            android:textColorHint="#A8A8AA"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvUserGenderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_17sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserJob" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvUserGender"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_11sdp"
        app:boxBackgroundMode="none"
        app:cursorColor="@color/blue"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserGenderTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_transparent_10stroke"
            android:fontFamily="@font/amaranth_regular"
            android:hint="@string/enter_your_gender"
            android:inputType="text"
            android:paddingVertical="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/blue"
            android:textColorHint="#A8A8AA"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddUser"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="@dimen/_23sdp"
        android:text="@string/add_a_new_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserGender" />

</androidx.constraintlayout.widget.ConstraintLayout>