<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/_17sdp"
    android:layout_marginBottom="@dimen/_11sdp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            android:fontFamily="@font/amaranth_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="heba" />

        <TextView
            android:id="@+id/tvUserAgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:fontFamily="@font/amaranth_regular"
            android:text="@string/age_"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

        <TextView
            android:id="@+id/tvUserAgeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="28"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/amaranth_regular"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_6sdp"
            app:layout_constraintStart_toEndOf="@+id/tvUserAgeTitle"
            app:layout_constraintTop_toTopOf="@+id/tvUserAgeTitle" />

        <TextView
            android:id="@+id/tvUserJobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:fontFamily="@font/amaranth_regular"
            android:text="@string/job_title_"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserAgeTitle" />

        <TextView
            android:id="@+id/tvUserJobValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Android Developer"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/amaranth_regular"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_6sdp"
            app:layout_constraintStart_toEndOf="@+id/tvUserJobTitle"
            app:layout_constraintTop_toTopOf="@+id/tvUserJobTitle" />

        <TextView
            android:id="@+id/tvUserGenderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:fontFamily="@font/amaranth_regular"
            android:text="@string/gender_"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_17sdp"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserJobTitle" />

        <TextView
            android:id="@+id/tvUserGenderValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Female"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/amaranth_regular"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_6sdp"
            app:layout_constraintStart_toEndOf="@+id/tvUserGenderTitle"
            app:layout_constraintTop_toTopOf="@+id/tvUserGenderTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>